# trivial

./: .coverage  .flake8  README.md  noxfile.py  pyproject.toml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: tests.test_console.imports  tests.test_wikipedia.imports  trivial.console.imports
.pytype/pyi/: noxfile.pyi
.pytype/pyi/tests/: conftest.pyi  test_console.pyi
.pytype/pyi/trivial/: wikipedia.pyi
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
src/trivial/: __init__.py  console.py  wikipedia.py
src/trivial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
