[tool.poetry]
name = "trivial"
version = "0.1.0"
description = "A module that retrieves random articles from Wikipedia."
authors = ["James McHargue"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FindawayWorld/trivial"
repository = "https://github.com/FindawayWorld/trivial"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.poetry.scripts]
trivial = "trivial.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["trivial"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

